--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,71 @@
-flask==2.3.3
-flask-cors==4.0.0
-pillow==10.0.0
-numpy==1.24.3
-matplotlib==3.7.2
+absl-py==2.3.1
+astunparse==1.6.3
+blinker==1.9.0
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+cors==1.0.1
+filelock==3.18.0
+Flask==3.1.1
+flask-cors==6.0.1
+flatbuffers==25.2.10
+fsspec==2025.7.0
+future==1.0.0
+gast==0.6.0
+gevent==25.5.1
+google-pasta==0.2.0
+greenlet==3.2.3
+grpcio==1.73.1
+h5py==3.14.0
+huggingface-hub==0.33.5
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+keras==3.10.0
+libclang==18.1.1
+Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+ml_dtypes==0.5.1
+mpmath==1.3.0
+namex==0.1.0
+networkx==3.5
+numpy==2.1.3
+opt_einsum==3.4.0
+optree==0.16.0
+packaging==25.0
+pillow==11.3.0
+protobuf==5.29.5
+pycparser==2.22
+Pygments==2.19.2
+PySocks==1.7.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+requests-file==2.1.0
+rich==14.0.0
+safetensors==0.5.3
+setuptools==80.9.0
+six==1.17.0
+sympy==1.14.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+termcolor==3.1.0
+tldextract==5.3.0
+tokenizers==0.21.2
+torch==2.7.1
+torchaudio==2.7.1
+torchvision==0.22.1
+tqdm==4.67.1
+transformers==4.53.3
+typing_extensions==4.14.1
+urllib3==2.5.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
+zope.event==5.1.1
+zope.interface==7.2
